Update Ktlint integration to Spotless
The Ktlint integration in the project has been updated from `JLLeitschuh/ktlint-gradle` to `diffplug/spotless`.

--- a/feature/ktlint/src/main/res/values/strings.xml
+++ b/feature/ktlint/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
 <![CDATA[\
 [Ktlint](https://pinterest.github.io/ktlint/) is used as the linter for this project.\
 ## Ktlint Integration\
-[Ktlint Gradle](https://github.com/JLLeitschuh/ktlint-gradle)
+[diffplug/spotless](https://github.com/diffplug/spotless/tree/main/plugin-gradle#applying-ktlint-to-kotlin-files)
 is used to integrate ktlint into the project.\
 ## Jetpack Compose Rules\
 [Jetpack Compose Rules](https://mrmans0n.github.io/compose-rules/) is a set of custom ktlint rules
