--- a/feature/ktlint/src/main/res/values/strings.xml
+++ b/feature/ktlint/src/main/res/values/strings.xml
@@ -1,27 +1,4 @@
 <resources>
     <string name="feature_ktlint_title">Ktlint</string>
-    <string name="feature_ktlint_document_md">
-<![CDATA[\
-[Ktlint](https://pinterest.github.io/ktlint/) is used as the linter for this project.\
-## Ktlint Integration\
-[diffplug/spotless](https://github.com/diffplug/spotless/tree/main/plugin-gradle#applying-ktlint-to-kotlin-files)
-is used to integrate ktlint into the project.\
-## Jetpack Compose Rules\
-[Jetpack Compose Rules](https://mrmans0n.github.io/compose-rules/) is a set of custom ktlint rules
-designed to help prevent common pitfalls when working with composables.
-It is used to maintain a healthy Compose implementation.\
-## Configuration\
-The `.editorconfig` file includes the following settings:\
-```ini\
-[*.{kt,kts}]\
-ktlint_code_style = android_studio\
-ktlint_experimental = enabled\
-ktlint_standard_class-signature = disabled\
-ktlint_standard_function-signature = disabled\
-ktlint_function_naming_ignore_when_annotated_with = Composable, Test\
-ij_kotlin_allow_trailing_comma = true\
-ij_kotlin_allow_trailing_comma_on_call_site = true\
-```
-]]>
-    </string>
+    <string name="feature_ktlint_document_md">[Ktlint](https://pinterest.github.io/ktlint/) is used as the linter for this project.\n\n## Ktlint Integration\n\n[diffplug/spotless](https://github.com/diffplug/spotless/tree/main/plugin-gradle#applying-ktlint-to-kotlin-files) is used to integrate ktlint into the project.\n\n## Jetpack Compose Rules\n\n[Jetpack Compose Rules](https://mrmans0n.github.io/compose-rules/) is a set of custom ktlint rules designed to help prevent common pitfalls when working with composables. It is used to maintain a healthy Compose implementation.\n\n## Configuration\n\nThe `.editorconfig` file includes the following settings:\n\n```ini\n[*.{kt,kts}]\nktlint_code_style = android_studio\nktlint_experimental = enabled\nktlint_standard_class-signature = disabled\nktlint_standard_function-signature = disabled\nktlint_function_naming_ignore_when_annotated_with = Composable,Test\nij_kotlin_allow_trailing_comma = true\nij_kotlin_allow_trailing_comma_on_call_site = true\n```</string>
 </resources>
