--- a/feature/hiltcomposable/src/main/res/values/strings.xml
+++ b/feature/hiltcomposable/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="feature_hilt_comp_title">Composable with Hilt</string>
+    <string name="feature_hilt_comp_title">"Composable with Hilt"</string>
 </resources>
