--- a/feature/unstyled/src/main/res/values/strings.xml
+++ b/feature/unstyled/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
     <string name="feature_unstyled_title">Unstyled</string>
+    <string name="feature_unstyled_label_value_separator">": "</string>
+    <string name="feature_unstyled_theme_label">Theme</string>
+    <string name="feature_unstyled_theme_value_light">Light</string>
+    <string name="feature_unstyled_theme_value_dark">Dark</string>
+    <string name="feature_unstyled_color_contrast_label">Color Contrast</string>
+    <string name="feature_unstyled_color_contrast_value_default">Default</string>
+    <string name="feature_unstyled_color_contrast_value_medium">Medium</string>
+    <string name="feature_unstyled_color_contrast_value_high">High</string>
+    <string name="feature_unstyled_primary_color_label">Primary Color</string>
+    <string name="feature_unstyled_secondary_color_label">Secondary Color</string>
+    <string name="feature_unstyled_tertiary_color_label">Tertiary Color</string>
+    <string name="feature_unstyled_color_value">#%06X</string>
 </resources>
