Add font scale to system style screen
This commit introduces a new section to the system style screen that displays the current font scale setting of the device.

The following changes were made:
- Added new string resources for the font scale label and value.
- Updated `SystemStyleValues.kt` to include a new `Row` that displays the font scale label and value.
- The font scale value is obtained using `LocalDensity.current.fontScale`.

--- a/feature/systemstyle/src/main/res/values/strings.xml
+++ b/feature/systemstyle/src/main/res/values/strings.xml
@@ -3,6 +3,8 @@
     <string name="feature_system_style_label_value_separator">": "</string>
     <string name="feature_system_style_theme_label">Theme</string>
     <string name="feature_system_style_theme_value_light">Light</string>
+    <string name="feature_system_style_font_scale_label">Font Scale</string>
+    <string name="feature_system_style_font_scale_value">%.2f</string>
     <string name="feature_system_style_theme_value_dark">Dark</string>
     <string name="feature_system_style_color_contrast_label">Color Contrast</string>
     <string name="feature_system_style_color_contrast_value_default">Default</string>
