--- a/feature/systemstyle/src/main/res/values/strings.xml
+++ b/feature/systemstyle/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="feature_system_style_title">System Style</string>
+    <string name="feature_system_style_document_md">Retrieve the theme and other settings specified in the System. Retrieval does not require Material or Material 3.\n\nThese are the values configured in the System:</string>
     <string name="feature_system_style_label_value_separator">": "</string>
     <string name="feature_system_style_theme_label">Theme</string>
     <string name="feature_system_style_theme_value_light">Light</string>
